# Beat

./: Beat.py  Beat_MainFrame.py  README.md  beat.py  pyproject.toml
data/: Site2_PCR_420.ab1  Site2_PCR_570-1.ab1  Site2_PCR_570-2.ab1  Site2_PCR_control-1.ab1  Site2_PCR_control-2.ab1  template1.csv
