[tool.poetry]
name = "Beat"
version = "0.0.0"
description = ""
authors = [HanLab-OSU, <"https://github.com/HanLab-OSU">]

[tool.poetry.dependencies]
python = "^3.7"
biopython = "^1.74"
pandas = "^0.25.1"
numpy = "^1.17"
scipy = "^1.3"
openpyxl = "^3.0"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
